--- a/PantryPal/Views/Ingredients/AddIngredients/AddIngredients.xib
+++ b/PantryPal/Views/Ingredients/AddIngredients/AddIngredients.xib
@@ -18,7 +18,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="360" height="400"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7hJ-Fg-5P5">
-                            <rect key="frame" x="215" y="336" width="117" height="33"/>
+                            <rect key="frame" x="215" y="340" width="117" height="33"/>
                             <color key="backgroundColor" red="0.2823529541" green="0.47843140360000003" blue="0.44313728810000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="117" id="lHq-WB-TOL"/>
@@ -33,14 +33,14 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="7hJ-Fg-5P5" firstAttribute="top" secondItem="zSP-PH-hdi" secondAttribute="top" constant="336" id="5MW-Md-aNx"/>
-                        <constraint firstAttribute="bottom" secondItem="7hJ-Fg-5P5" secondAttribute="bottom" constant="31" id="CEJ-Ed-hzP"/>
+                        <constraint firstItem="7hJ-Fg-5P5" firstAttribute="top" secondItem="zSP-PH-hdi" secondAttribute="top" constant="340" id="5MW-Md-aNx"/>
+                        <constraint firstAttribute="bottom" secondItem="7hJ-Fg-5P5" secondAttribute="bottom" constant="27" id="CEJ-Ed-hzP"/>
                         <constraint firstItem="7hJ-Fg-5P5" firstAttribute="leading" secondItem="zSP-PH-hdi" secondAttribute="leading" constant="215" id="RnZ-UP-8rr"/>
                         <constraint firstAttribute="trailing" secondItem="7hJ-Fg-5P5" secondAttribute="trailing" constant="28" id="Xf1-1w-hpa"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JEf-Q6-xsV">
-                    <rect key="frame" x="73" y="335" width="29" height="25"/>
+                    <rect key="frame" x="73" y="344" width="29" height="25"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Rzs-22-iv2">
                             <rect key="frame" x="4.6666666666666714" y="3.3333333333333126" width="19.666666666666668" height="19"/>
@@ -117,6 +117,9 @@
                 </segmentedControl>
                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="商品條碼（選填）" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LhY-Bf-wMs">
                     <rect key="frame" x="31" y="294" width="231" height="34"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="34" id="8dx-jp-wH7"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                 </textField>
@@ -144,11 +147,10 @@
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title="相簿"/>
                 </button>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="outline_alarm_black_36pt" translatesAutoresizingMaskIntoConstraints="NO" id="Cds-nq-7QG">
-                    <rect key="frame" x="32" y="332" width="33" height="31.333333333333314"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bell.and.waves.left.and.right.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Cds-nq-7QG">
+                    <rect key="frame" x="32" y="340.33333333333331" width="33" height="30.666666666666686"/>
                     <color key="tintColor" red="0.2823529541" green="0.47843140360000003" blue="0.44313728810000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="31.329999999999998" id="HWu-s5-6sD"/>
                         <constraint firstAttribute="width" constant="33" id="NdR-9m-Rxc"/>
                     </constraints>
                 </imageView>
@@ -171,17 +173,17 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="Cds-nq-7QG" firstAttribute="top" secondItem="LhY-Bf-wMs" secondAttribute="bottom" constant="4" id="1P4-fz-ThA"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ILd-CN-bbp" secondAttribute="trailing" constant="24" id="23p-Kr-7zO"/>
+                <constraint firstItem="Cds-nq-7QG" firstAttribute="top" secondItem="LhY-Bf-wMs" secondAttribute="bottom" constant="12" id="2V4-8h-78w"/>
                 <constraint firstItem="Lcl-Jp-Lao" firstAttribute="leading" secondItem="tTr-dl-5cl" secondAttribute="trailing" constant="14" id="3eZ-2W-bml"/>
                 <constraint firstItem="zSP-PH-hdi" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="3nR-15-oNB"/>
-                <constraint firstItem="JEf-Q6-xsV" firstAttribute="top" secondItem="LhY-Bf-wMs" secondAttribute="bottom" constant="7" id="4pV-Tg-rof"/>
+                <constraint firstItem="JEf-Q6-xsV" firstAttribute="top" secondItem="LhY-Bf-wMs" secondAttribute="bottom" constant="16" id="4pV-Tg-rof"/>
                 <constraint firstItem="tTr-dl-5cl" firstAttribute="top" secondItem="ILd-CN-bbp" secondAttribute="bottom" constant="17" id="7O2-yd-xHX"/>
                 <constraint firstItem="u5j-Ol-ygX" firstAttribute="top" secondItem="tTr-dl-5cl" secondAttribute="bottom" constant="60" id="7YN-1I-KAj"/>
                 <constraint firstItem="BB7-DO-nWO" firstAttribute="top" secondItem="tTr-dl-5cl" secondAttribute="bottom" constant="8" symbolic="YES" id="8mN-Fo-wY3"/>
                 <constraint firstItem="GPd-Ei-O4j" firstAttribute="leading" secondItem="tTr-dl-5cl" secondAttribute="trailing" constant="14" id="AEp-pX-a3M"/>
                 <constraint firstItem="Hcf-Ps-YWc" firstAttribute="top" secondItem="tTr-dl-5cl" secondAttribute="bottom" constant="8" symbolic="YES" id="Aev-H3-t9U"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="JEf-Q6-xsV" secondAttribute="bottom" constant="40" id="AuN-8m-Lff"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="JEf-Q6-xsV" secondAttribute="bottom" constant="31" id="AuN-8m-Lff"/>
                 <constraint firstItem="u5j-Ol-ygX" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="31" id="CI8-LR-rof"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="eYC-23-ZhY" secondAttribute="trailing" constant="24" id="EFw-jH-Fj5"/>
                 <constraint firstItem="GPd-Ei-O4j" firstAttribute="top" secondItem="eYC-23-ZhY" secondAttribute="bottom" constant="8" symbolic="YES" id="ERG-US-9NR"/>
@@ -190,7 +192,6 @@
                 <constraint firstAttribute="bottom" secondItem="zSP-PH-hdi" secondAttribute="bottom" id="J3z-61-OjM"/>
                 <constraint firstItem="Cge-Vu-M2L" firstAttribute="top" secondItem="eYC-23-ZhY" secondAttribute="bottom" constant="11" id="JCq-75-iua"/>
                 <constraint firstItem="zSP-PH-hdi" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="KMb-rT-HkJ"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Cds-nq-7QG" secondAttribute="bottom" constant="36.670000000000002" id="KPM-lh-2rP"/>
                 <constraint firstItem="u5j-Ol-ygX" firstAttribute="top" secondItem="Lcl-Jp-Lao" secondAttribute="bottom" constant="12" id="Lrq-EZ-lZ5"/>
                 <constraint firstItem="Lcl-Jp-Lao" firstAttribute="top" secondItem="GPd-Ei-O4j" secondAttribute="bottom" constant="8" symbolic="YES" id="SMc-TJ-i1w"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Cge-Vu-M2L" secondAttribute="trailing" constant="39.329999999999998" id="WKM-jE-ODB"/>
@@ -205,8 +206,8 @@
                 <constraint firstItem="ILd-CN-bbp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="41" id="dhj-wz-Fi9"/>
                 <constraint firstItem="Lcl-Jp-Lao" firstAttribute="top" secondItem="Cge-Vu-M2L" secondAttribute="bottom" constant="10" id="gCH-Ly-zPl"/>
                 <constraint firstItem="JEf-Q6-xsV" firstAttribute="leading" secondItem="Cds-nq-7QG" secondAttribute="trailing" constant="8" symbolic="YES" id="iHu-tU-4co"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="LhY-Bf-wMs" secondAttribute="bottom" constant="72" id="kkz-At-XFn"/>
                 <constraint firstItem="Lcl-Jp-Lao" firstAttribute="leading" secondItem="BB7-DO-nWO" secondAttribute="trailing" constant="15" id="mTq-uG-QLa"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Cds-nq-7QG" secondAttribute="bottom" constant="28.670000000000002" id="ogu-ca-9y6"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Y5x-6E-kfs" secondAttribute="trailing" constant="57" id="omr-bf-UVJ"/>
                 <constraint firstItem="Cge-Vu-M2L" firstAttribute="leading" secondItem="GPd-Ei-O4j" secondAttribute="trailing" constant="8" symbolic="YES" id="oyp-cy-Ps2"/>
                 <constraint firstItem="u5j-Ol-ygX" firstAttribute="top" secondItem="Hcf-Ps-YWc" secondAttribute="bottom" constant="27" id="qz3-l1-0Or"/>
@@ -240,11 +241,11 @@
         </view>
     </objects>
     <resources>
+        <image name="bell.and.waves.left.and.right.fill" catalog="system" width="128" height="77"/>
         <image name="calendar" catalog="system" width="128" height="107"/>
         <image name="camera" catalog="system" width="128" height="93"/>
         <image name="checkmark.circle.fill" catalog="system" width="128" height="123"/>
         <image name="close_icon" width="64" height="64"/>
-        <image name="outline_alarm_black_36pt" width="36" height="36"/>
         <image name="outline_note_add_black_24pt" width="24" height="24"/>
         <image name="watermelon" width="80" height="80"/>
         <systemColor name="labelColor">
