--- a/PantryPal/Views/Ingredients/IngredientsDetail/IngredientsDetail.storyboard
+++ b/PantryPal/Views/Ingredients/IngredientsDetail/IngredientsDetail.storyboard
@@ -26,7 +26,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="250"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImage" translatesAutoresizingMaskIntoConstraints="NO" id="zbt-rw-NiF">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImage" translatesAutoresizingMaskIntoConstraints="NO" id="zbt-rw-NiF">
                                                     <rect key="frame" x="0.0" y="0.0" width="393" height="250"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="250" id="OWz-1l-cOZ"/>
